[package]
name = "jeepers"
version = "0.1.0"
authors = ["Michael Mokrysz <hi@46b.it>"]
repository = "https://github.com/46bit/jeepers.git"
homepage = "https://github.com/46bit/jeepers"
license = "LGPL-3.0"
readme = "README.md"
#documentation = "http://killercup.github.io/hsl-rs/"
description = "A Genetic Programming library for Rust."

[dependencies]
rand = "0.3"

# [dev-dependencies]
# quickcheck = "0.2.*"
