[package]
name = "jeepers"
version = "0.1.2"
authors = ["Michael Mokrysz <hi@46b.it>"]
repository = "https://github.com/46bit/jeepers.git"
homepage = "https://github.com/46bit/jeepers"
license = "LGPL-3.0"
readme = "README.md"
#documentation = "http://killercup.github.io/hsl-rs/"
description = "Incomplete Genetic Programming library for Rust."

[dependencies]
rand = "0.3"
clippy = {version = "0.0.112", optional = true}

# [dev-dependencies]
# quickcheck = "0.2.*"

[features]
default = []
dev = ["clippy"]
