[package]
name = "evco"
version = "0.2.1"
authors = ["Michael Mokrysz <hi@46b.it>"]
repository = "https://github.com/46bit/evco.git"
homepage = "https://github.com/46bit/evco"
license = "LGPL-3.0"
readme = "README.md"
documentation = "https://46bit.github.io/evco/"
description = "Incomplete Genetic Programming library for Rust."

[dependencies]
rand = "0.3"
clippy = {version = "0.0.*", optional = true}

# [dev-dependencies]
# quickcheck = "0.2.*"

[features]
default = []
dev = [] #"clippy"]
